상근이알람 연습예제

--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <p class="p">제목</p>
-  <script src="../js/test.js">
+  <p>나이 계산</p>
+  <script src="../js/나이계산.js">
 
   </script>
 </body>
