콜백함수 연습

--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,11 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=\, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  <p>나이 계산</p>
-  <script src="../js/나이계산.js">
-
-  </script>
+  <button id ="myBtt">눌러!</button>
+  <script src="../js/타이머콜백.js"></script>
 </body>
 </html>
